--- a/src/main/resources/templates/account/check-email.html
+++ b/src/main/resources/templates/account/check-email.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title th:text="#{title.check-email}">title.check-email</title>
-    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<div class="container">
+<main class="container">
     <div th:if="${error}" class="alert alert-danger" role="alert">
         <h6 th:text="${error}"></h6>
         <small>You can contact our <a class="alert-link" href="#">customer service</a></small>
@@ -30,8 +29,9 @@
         <p class="lead" th:text="${email}">your@email.com</p>
         <a class="btn btn-outline-info" th:href="@{/}">Main page</a>
     </div>
-</div>
+</main>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
+
 </html>
