--- a/src/main/resources/templates/account/send-email-login-link.html
+++ b/src/main/resources/templates/account/send-email-login-link.html
@@ -1,14 +1,12 @@
 <!doctype html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
   <title th:text="#{title.email-login}">title.email-login</title>
   <link rel="stylesheet" th:href="@{/css/sign-in.css}" />
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="form-signin text-center w-100 m-auto">
@@ -37,4 +35,5 @@
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
+
 </html>
