--- a/src/main/resources/templates/party/events.html
+++ b/src/main/resources/templates/party/events.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title th:text="#{title.party}">title.party</title>
-    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
+
 <main class="container">
     <div th:replace="fragments.html :: party-info"></div>
     <div th:replace="fragments.html :: party-menu(partyMenu='event')"></div>
@@ -85,8 +85,10 @@
         </div>
     </div>
 </main>
+
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: tooltip}"></script>
 <script th:replace="~{fragments/script.html :: date-time}"></script>
 </body>
+
 </html>
