--- a/src/main/resources/templates/party/members.html
+++ b/src/main/resources/templates/party/members.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title th:text="#{title.party}">title.party</title>
-    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
 
@@ -17,7 +16,9 @@
     <div th:replace="fragments.html :: member-list(members=${party.managers},isManager=${true})"></div>
     <div th:replace="fragments.html :: member-list(members=${party.members},isManager=${false})"></div>
 </main>
+
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: tooltip}"></script>
 </body>
+
 </html>
