--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -1,15 +1,14 @@
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title}">title</title>
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<main>
-    <div class="container">
+<main class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
             <!-- menu -->
@@ -64,9 +63,10 @@
             </div>
         </div>
     </div>
-</div>
 </main>
+
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
+
 </html>
