--- a/src/main/resources/templates/account/email-login.html
+++ b/src/main/resources/templates/account/email-login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title th:text="#{title.email-login}">title.email-login</title>
-    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<div class="container">
+<main class="container">
     <div class="py-5 text-center">
         <p class="lead">Email Login</p>
         <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}">
@@ -21,8 +20,9 @@
             </h2>
         </div>
     </div>
-</div>
+</main>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
+
 </html>
