--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,46 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+<head th:replace="~{fragments/head.html :: head-title-links-no-basic(~{::title}, ~{::link})}">
     <title th:text="#{title.sign-up}">title.sign-up</title>
     <link rel="stylesheet" th:href="@{/css/sign-up.css}" />
 </head>
 
-<body class="text-center">
+<body>
+<main class="form-signup text-center w-100 m-auto">
+    <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
+        <a href="/"><img src="/assets/brand/logo-dark.png" alt="" width="160" height="160"></a>
 
-
-<main class="form-signup w-100 m-auto">
-    <div class="container">
-        <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
-            <img class="mb-4" src="/assets/brand/logo-dark.png" alt="" width="160" height="160">
-            <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
-
-            <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" th:errorclass="field-error" placeholder="name@example.com" required>
-                <label for="floatingInputTop">Email address</label>
-                <small class="field-error form-text text-danger" th:errors="*{email}">Email Error</small>
-            </div>
-            <div class="form-floating">
-                <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" th:errorclass="field-error" placeholder="Username" required minlength="3" maxlength="20">
-                <label for="floatingInputMiddle">Username</label>
-                <small class="field-error form-text text-danger" th:errors="*{username}">Username Error</small>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" th:errorclass="field-error" placeholder="Password" required minlength="8" maxlength="50">
-                <label for="floatingInputBottom">Password</label>
-                <small class="field-error form-text text-danger" th:errors="*{password}">Password Error</small>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-    <!--            <small id="submitHelp" class="form-text text-muted">-->
-    <!--                <a href="#">terms</a>-->
-    <!--            </small>-->
-        </form>
-    </div>
-
-    <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
+        <div class="form-floating">
+            <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" th:errorclass="field-error" placeholder="name@example.com" required>
+            <label for="floatingInputTop">Email address</label>
+            <small class="field-error form-text text-danger" th:errors="*{email}">Email Error</small>
+        </div>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" th:errorclass="field-error" placeholder="Username" required minlength="3" maxlength="20">
+            <label for="floatingInputMiddle">Username</label>
+            <small class="field-error form-text text-danger" th:errors="*{username}">Username Error</small>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" th:errorclass="field-error" placeholder="Password" required minlength="8" maxlength="50">
+            <label for="floatingInputBottom">Password</label>
+            <small class="field-error form-text text-danger" th:errors="*{password}">Password Error</small>
+        </div>
+        <button class="w-100 btn btn-lg btn-dark" type="submit">Sign up</button>
+<!--            <small id="submitHelp" class="form-text text-muted">-->
+<!--                <a href="#">terms</a>-->
+<!--            </small>-->
+    </form>
 </main>
-
 
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
+
 </html>
