--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body class="bg-light">
+<body>
     <footer th:fragment="footer-common" class="text-center mt-5">
         <small>Mouken &copy; 2022</small>
     </footer>
