--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body class="bg-light">
+<body>
 
     <script th:fragment="form-validation" type="application/javascript" >
         (function () {
