--- a/src/main/resources/templates/party/form.html
+++ b/src/main/resources/templates/party/form.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
     <title th:text="#{title.party}">title.party</title>
-    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
-<body class="bg-light">
+
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="container">
@@ -70,8 +71,10 @@
         </form>
     </div>
 </main>
+
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 <script th:replace="~{fragments/script.html :: editor-script}"></script>
 </body>
+
 </html>
