--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title}">title</title>
 </head>
 
-<body class="bg-light">
+<body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
-<main>
-    <div class="container">
+
+<main class="container">
     <div class="row mt-5 justify-content-center">
 
         <div class="col-2">
@@ -76,8 +76,9 @@
             </div>
         </div>
     </div>
-</div>
 </main>
+
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
+
 </html>
