--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -14,10 +14,10 @@
             <!-- profile image -->
             <svg th:if="${#strings.isEmpty(account.profileImage)}"
                  class="img-fluid float-left rounded img-thumbnail"
-                 th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
+                 th:data-jdenticon-value="${account.username}" width="136" height="136"></svg>
             <img th:if="${!#strings.isEmpty(account.profileImage)}"
                  class="img-fluid float-left rounded img-thumbnail"
-                 th:src="${account.profileImage}" width="125" height="125"/>
+                 th:src="${account.profileImage}" width="136" height="136"/>
         </div>
         <div class="col-8">
             <!-- username -->
@@ -33,9 +33,13 @@
             <!-- tab -->
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
-                   role="tab" aria-controls="v-pills-profile" aria-selected="true">intro</a>
+                   role="tab" aria-controls="v-pills-profile" aria-selected="true" th:text="intro">Intro</a>
                 <a class="nav-link" id="v-pills-party-tab" data-toggle="pill" href="#v-pills-party"
-                   role="tab" aria-controls="v-pills-party" aria-selected="false">party</a>
+                   role="tab" aria-controls="v-pills-party" aria-selected="false" th:text="party">Party</a>
+                <div th:if="${isOwner}">
+                <a class="nav-link" id="v-pills-party-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
+                   role="tab" aria-controls="v-pills-party-settings" aria-selected="false" th:text="party.settings">Party Settings</a>
+                </div>
             </div>
         </div>
         <div class="col-8">
@@ -65,9 +69,7 @@
                         </span>
                         <span th:if="${account.emailVerified}" th:text="'joined ' + ${#temporals.format(account.joinedAt, 'MM/dd/yyyy')}" class="col-9"></span>
                     </p>
-                    <div th:if="${isOwner}">
-                        <a class="btn btn-outline-primary" href="#" th:href="@{/settings/profile}">Update</a>
-                    </div>
+
                 </div>
                 <div class="tab-pane fade" id="v-pills-party" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                     Study
