style: change profile settings tab

--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -37,8 +37,8 @@
                 <a class="nav-link" id="v-pills-party-tab" data-toggle="pill" href="#v-pills-party"
                    role="tab" aria-controls="v-pills-party" aria-selected="false" th:text="party">Party</a>
                 <div th:if="${isOwner}">
-                <a class="nav-link" id="v-pills-party-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
-                   role="tab" aria-controls="v-pills-party-settings" aria-selected="false" th:text="party.settings">Party Settings</a>
+                <a class="nav-link" id="v-pills-profile-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
+                   role="tab" aria-controls="v-pills-profile-settings" aria-selected="false" th:text="profile.setting">Profile Settings</a>
                 </div>
             </div>
         </div>
