--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -10,7 +10,7 @@
 
 <main class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="col-2">
+        <div class="col-md-2 col-3">
             <!-- profile image -->
             <svg th:if="${#strings.isEmpty(account.profileImage)}"
                  class="img-fluid float-left rounded img-thumbnail"
@@ -21,7 +21,7 @@
                  th:src="${account.profileImage}"
                  width="136" height="136"/>
         </div>
-        <div class="col-8">
+        <div class="col-md-8 col-7">
             <!-- username -->
             <h1 class="display-4 " th:text="${account.username}">username</h1>
             <!-- bio -->
@@ -31,7 +31,7 @@
     </div>
 
     <div class="row mt-3 justify-content-center">
-        <div class="col-2">
+        <div class="col-md-2 col-3">
             <!-- tab -->
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
@@ -39,12 +39,12 @@
                 <a class="nav-link" id="v-pills-party-tab" data-toggle="pill" href="#v-pills-party"
                    role="tab" aria-controls="v-pills-party" aria-selected="false" th:text="#{party}">Party</a>
                 <div th:if="${isOwner}">
-                <a class="nav-link" id="v-pills-profile-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
-                   role="tab" aria-controls="v-pills-profile-settings" aria-selected="false" th:text="#{settings}">Profile Settings</a>
+                <a class="nav-link text-danger" id="v-pills-profile-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
+                   role="tab" aria-controls="v-pills-profile-settings" aria-selected="false" th:text="#{settings}">settings</a>
                 </div>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-md-8 col-7">
             <!-- tab content -->
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-home-tab">
