--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,99 +3,62 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-
-<div th:fragment="settings-menu (currentMenu)" class="list-group">
-    <a class="list-group-item list-group-item-action"
-       th:classappend="${currentMenu == 'profile'}? active"
-       href="#" th:href="@{/settings/profile}">
-        Profile
-    </a>
-    <a class="list-group-item list-group-item-action"
-       th:classappend="${currentMenu == 'password'}? active"
-       href="#" th:href="@{/settings/password}">
-        Password
-    </a>
-    <a class="list-group-item list-group-item-action"
-       th:classappend="${currentMenu == 'notifications'}? active"
-       href="#" th:href="@{/settings/notifications}">
-        Notifications
-    </a>
-    <a class="list-group-item list-group-item-action"
-       th:classappend="${currentMenu == 'tags'}? active"
-       href="#" th:href="@{/settings/tags}">
-        Tags
-    </a>
-    <a class="list-group-item list-group-item-action"
-       th:classappend="${currentMenu == 'zones'}? active"
-       href="#" th:href="@{/settings/zones}">
-        Locations
-    </a>
-    <a class="list-group-item list-group-item-action list-group-item-danger"
-       th:classappend="${currentMenu == 'account'}? active"
-       href="#" th:href="@{/settings/account}">
-        Account
-    </a>
+<div th:fragment="settings-menu (currentMenu)" class="nav flex-column nav-pills" id="v-pills-settings-tab" role="tablist" aria-orientation="vertical">
+    <a class="nav-link" th:classappend="${currentMenu == 'profile'}? active"
+       id="v-pills-settings-profile-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
+       role="tab" aria-controls="v-pills-settings-profile" aria-selected="false" th:text="#{profile}">profile</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'password'}? active"
+       id="v-pills-settings-password-tab" data-toggle="pill" href="#" th:href="@{/settings/password}"
+       role="tab" aria-controls="v-pills-settings-password" aria-selected="false" th:text="#{password}">password</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'notifications'}? active"
+       id="v-pills-settings-notifications-tab" data-toggle="pill" href="#" th:href="@{/settings/notifications}"
+       role="tab" aria-controls="v-pills-settings-notifications" aria-selected="false" th:text="#{notifications}">notifications</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'tags'}? active"
+       id="v-pills-settings-tags-tab" data-toggle="pill" href="#" th:href="@{/settings/tags}"
+       role="tab" aria-controls="v-pills-settings-tags" aria-selected="false" th:text="#{tags}">tags</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'zones'}? active"
+       id="v-pills-settings-zones-tab" data-toggle="pill" href="#" th:href="@{/settings/zones}"
+       role="tab" aria-controls="v-pills-settings-zones" aria-selected="false" th:text="#{zones}">zones</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'account'}? active"
+       id="v-pills-settings-account-tab" data-toggle="pill" href="#" th:href="@{/settings/account}"
+       role="tab" aria-controls="v-pills-settings-account" aria-selected="false" th:text="#{account}">account</a>
 </div>
 
 <div th:fragment="party-banner" th:if="${party.useBanner}" class="row" id="party-logo">
     <img th:src="${party.image}"/>
 </div>
 
-<div th:fragment="party-info">
-    <div class="row pt-4 text-left justify-content-center bg-light">
-        <div class="col-6">
-            <a href="#" class="text-decoration-none" th:href="@{'/party/' + ${party.path}}">
-                <span class="h2" th:text="${party.title}">Party title</span>
-            </a>
+
+<div th:fragment="party-info-menu(partyMenu)" class="bg-light">
+    <div class="row pt-4 mx-5">
+        <div class="col-md-5 text-left">
+            <h2 th:text="${party.title}">party.title</h2>
+            <p class="lead" th:text="${party.shortDescription}">party.shortDescription</p>
         </div>
-        <div class="col-4 text-right justify-content-end">
-                <span th:if="${!party.published}"
-                      class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom"
-                      title="Wating for release">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>DRAFT</button>
-                </span>
-            <span th:if="${party.closed}"
-                  class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Party is closed now">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>CLOSED</button>
-                </span>
-            <span th:if="${!party.recruiting}"
-                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Not recruiting">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
-                </span>
-            <span sec:authorize="isAuthenticated()" th:if="${party.isJoinable(#authentication.principal)}"
-                  class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary" th:href="@{'/party/' + ${party.path} + '/join'}">
-                        Join the party
-                    </a>
-                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/members'}"
-                       th:text="${party.members.size()}">1</a>
-                </span>
-            <span sec:authorize="isAuthenticated()"
-                  th:if="${!party.closed && party.isMember(#authentication.principal)}" class="btn-group" role="group">
-                    <a class="btn btn-outline-warning" th:href="@{'/party/' + ${party.path} + '/leave'}">
-                        Leave the party
-                    </a>
-                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/members'}"
-                       th:text="${party.members.size()}">1</a>
-                </span>
-            <span sec:authorize="isAuthenticated()"
-                  th:if="${party.published && !party.closed && party.isManager(#authentication.principal)}">
-                    <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/new-event'}">
-                        <i class="fa fa-plus"></i> New Party
-                    </a>
-                </span>
+        <div class="col-md-5 d-md-flex flex-row-reverse">
+            <span th:if="${!party.published}" class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Wating for release">
+                <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>DRAFT</button>
+            </span>
+            <span th:if="${party.closed}" class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Party is closed now">
+                <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>CLOSED</button>
+            </span>
+            <span th:if="${!party.recruiting}" class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Not recruiting">
+                <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
+            </span>
+            <span sec:authorize="isAuthenticated()" th:if="${party.isJoinable(#authentication.principal)}" class="btn-group" role="group" aria-label="Basic example">
+                <a class="btn btn-primary" th:href="@{'/party/' + ${party.path} + '/join'}">
+                    Join the party
+                </a>
+                <a class="btn btn-outline-primary" th:href="@{'/party/' + ${party.path} + '/members'}" th:text="${party.members.size()}">
+                    1
+                </a>
+            </span>
         </div>
     </div>
-    <div class="row justify-content-center bg-light">
-        <div class="col-10">
-            <p class="lead" th:text="${party.shortDescription}"></p>
-        </div>
-    </div>
-    <div class="row justify-content-center bg-light">
-        <div class="col-10">
+    <div class="row mx-5">
+        <div class="col-md-10">
             <p>
-                <span th:each="tag: ${party.tags}"
-                      class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+                <span th:each="tag: ${party.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
                     <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
                         <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
                     </a>
@@ -108,30 +71,18 @@
             </p>
         </div>
     </div>
-</div>
-
-<div th:fragment="party-menu (partyMenu)" class="row px-3 justify-content-center bg-light">
-    <nav class="col-10 nav nav-tabs">
-        <a class="nav-item nav-link"
-           th:classappend="${partyMenu == 'info'}? active"
-           href="#"  th:href="@{'/party/' + ${party.path}}">
-            <i class="fa fa-info-circle"></i> Intro
+    <nav class="nav nav-tabs">
+        <a class="nav-item nav-link ms-5" th:classappend="${partyMenu == 'info'}? active" href="#"  th:href="@{'/party/' + ${party.path}}">
+            <i class="fa fa-info-circle"></i>
         </a>
-        <a class="nav-item nav-link"
-           th:classappend="${partyMenu == 'members'}? active"
-           href="#" th:href="@{'/party/' + ${party.path} + '/members'}">
-            <i class="fa fa-user"></i> Members
+        <a class="nav-item nav-link" th:classappend="${partyMenu == 'members'}? active" href="#" th:href="@{'/party/' + ${party.path} + '/members'}">
+            <i class="fa fa-user"></i>
         </a>
-        <a class="nav-item nav-link"
-           th:classappend="${partyMenu == 'events'}? active"
-           href="#" th:href="@{'/party/' + ${party.path} + '/events'}">
-            <i class="fa fa-calendar"></i> Party
+        <a class="nav-item nav-link" th:classappend="${partyMenu == 'events'}? active" href="#" th:href="@{'/party/' + ${party.path} + '/events'}">
+            <i class="fa fa-calendar"></i>
         </a>
-        <a sec:authorize="isAuthenticated()"
-           th:if="${party.isManager(#authentication.principal)}"
-           class="nav-item nav-link" th:classappend="${partyMenu == 'settings'}? active"
-           href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}">
-            <i class="fa fa-cog"></i> Setting
+        <a class="nav-item nav-link me-5" th:classappend="${partyMenu == 'settings'}? active" href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}" sec:authorize="isAuthenticated()" th:if="${party.isManager(#authentication.principal)}" >
+            <i class="fa fa-cog"></i>
         </a>
     </nav>
 </div>
@@ -149,17 +100,22 @@
     </ul>
 </div>
 
-<div th:fragment="party-settings-menu (currentMenu)" class="list-group">
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}">Intro</a>
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'banner'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/banner'}">Banner</a>
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/tags'}">Topic</a>
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/zones'}">Location</a>
-    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'party'}? active"
-       href="#" th:href="@{'/party/' + ${party.path} + '/settings/party'}">Party</a>
+<div th:fragment="party-settings-menu (currentMenu)" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+    <a class="nav-link" th:classappend="${currentMenu == 'description'}? active"
+       id="v-pills-party-settings-description-tab" data-toggle="pill" href="#" th:href="@{'/party/' + ${party.path} + '/settings/description'}"
+       role="tab" aria-controls="v-pills-party-settings-description" aria-selected="false" th:text="#{description}">description</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'banner'}? active"
+       id="v-pills-party-settings-banner-tab" data-toggle="pill" href="#" th:href="@{'/party/' + ${party.path} + '/settings/banner'}"
+       role="tab" aria-controls="v-pills-party-settings-banner" aria-selected="false" th:text="#{banner}">banner</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'tags'}? active"
+       id="v-pills-party-settings-tags-tab" data-toggle="pill" href="#" th:href="@{'/party/' + ${party.path} + '/settings/tags'}"
+       role="tab" aria-controls="v-pills-party-settings-tags" aria-selected="false" th:text="#{tags}">tags</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'zones'}? active"
+       id="v-pills-party-settings-zones-tab" data-toggle="pill" href="#" th:href="@{'/party/' + ${party.path} + '/settings/zones'}"
+       role="tab" aria-controls="v-pills-party-settings-zones" aria-selected="false" th:text="#{zones}">zones</a>
+    <a class="nav-link" th:classappend="${currentMenu == 'party'}? active"
+       id="v-pills-party-settings-party-tab" data-toggle="pill" href="#" th:href="@{'/party/' + ${party.path} + '/settings/party'}"
+       role="tab" aria-controls="v-pills-party-settings-party" aria-selected="false" th:text="#{party}">party</a>
 </div>
 
 <div th:fragment="message" th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
