--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,9 +19,13 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Mouken</h1>
                 <p class="lead text-muted">Look for a team you want.</p>
-                <p>
+                <p sec:authorize="!isAuthenticated()">
                     <a href="#" th:href="@{/sign-up}" class="btn btn-dark my-2" >Create account</a>
                     <a href="#" th:href="@{/login}" class="btn btn-secondary my-2">Sign in</a>
+                </p>
+                <p sec:authorize="isAuthenticated()">
+                    <a href="#" th:href="@{/}" class="btn btn-primary my-2" >Find a team</a><!--todo-->
+                    <a href="#" th:href="@{/new-party}" class="btn btn-secondary my-2">Make a team</a>
                 </p>
             </div>
         </div>
