--- a/src/main/resources/templates/party/events.html
+++ b/src/main/resources/templates/party/events.html
@@ -8,12 +8,10 @@
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
+<div th:replace="fragments.html :: party-info-menu(partyMenu='events')"></div>
 
 <main class="container">
-    <div th:replace="fragments.html :: party-info"></div>
-    <div th:replace="fragments.html :: party-menu(partyMenu='event')"></div>
-
-    <div class="row justify-content-center">
+    <div class="row mt-3 justify-content-center">
         <div class="col-10 px-0 row">
             <div class="col-2 px-0">
                 <ul class="list-group">
