--- a/src/main/resources/templates/party/settings/party.html
+++ b/src/main/resources/templates/party/settings/party.html
@@ -8,10 +8,9 @@
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
+<div th:replace="fragments.html :: party-info-menu(partyMenu='settings')"></div>
 
 <main class="container">
-    <div th:replace="fragments.html :: party-info"></div>
-    <div th:replace="fragments.html :: party-menu(partyMenu='settings')"></div>
 
     <div class="row mt-3 justify-content-center">
 
