--- a/src/main/resources/templates/party/view.html
+++ b/src/main/resources/templates/party/view.html
@@ -8,14 +8,10 @@
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
+<div th:replace="fragments.html :: party-info-menu(partyMenu='info')"></div>
 
 <main class="container">
-    <div th:replace="fragments.html :: party-info"></div>
-    <div th:replace="fragments.html :: party-menu(partyMenu='info')"></div>
-
-    <div class="row px-3 justify-content-center">
-        <div class="col-10 pt-3" th:utext="${party.fullDescription}"></div>
-    </div>
+    <div class="pt-3 justify-content-center" th:utext="${party.fullDescription}"></div>
 </main>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
