--- a/src/main/resources/templates/settings/account.html
+++ b/src/main/resources/templates/settings/account.html
@@ -9,34 +9,35 @@
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="container">
-    <div class="row my-5 mx-5 justify-content-center">
-        <div class="col-md-3 mb-3">
+    <div class="row my-5 justify-content-center">
+        <div class="col-lg-2 col-3">
             <div th:replace="fragments.html :: settings-menu(currentMenu='account')"></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-8">
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mb-3" role="alert">
                 <span th:text="${message}">Update Complete</span>
             </div>
             <form class="needs-validation" action="#" th:action="@{/settings/account}" th:object="${usernameForm}" method="post" novalidate>
                 <div class="form-group mb-2">
-                    <label for="username" class="form-label">Username</label>
-                    <input id="username" type="text" th:field="*{newUsername}" class="form-control" aria-describedby="usernameHelp" required>
+                    <label for="username" class="form-label">Modifying username</label>
+                    <div class="alert alert-secondary" role="alert">
+                        Inactive
+                    </div>
+                    <input id="username" type="text" th:field="*{newUsername}" class="form-control" aria-describedby="usernameHelp" required disabled>
                     <small id="usernameHelp" class="form-text text-muted"></small>
                     <small class="invalid-feedback">Enter your new username</small>
                     <small class="form-text text-danger" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">username Error</small>
                 </div>
                 <div class="form-group d-flex align-items-end flex-column">
-                    <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">Confirm</button>
+                    <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp" disabled>Confirm</button>
                 </div>
             </form>
-            <div class="col-lg-12">
-                <h5 class="text-danger">Account Delete</h5>
-                <div class="alert alert-danger" role="alert">
-                    This account can not be deleted.
-                </div>
-                <div class="form-group d-flex align-items-end flex-column">
-                    <button class="btn btn-outline-danger disabled">Account Delete</button>
-                </div>
+            <h5 class="text-danger">Delete account</h5>
+            <div class="alert alert-danger" role="alert">
+                Inactive
+            </div>
+            <div class="form-group d-flex align-items-end flex-column">
+                <button class="btn btn-outline-danger disabled">Account Delete</button>
             </div>
         </div>
     </div>
