--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -9,12 +9,12 @@
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="container">
-    <div class="row my-5 mx-5 justify-content-center">
-        <div class="col-md-3 mb-3">
+    <div class="row my-5 justify-content-center">
+        <div class="col-lg-2 col-3">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='notifications')"></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-8">
             <!-- alert -->
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
                 <span th:text="${message}">Update Complete</span>
