--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -10,12 +10,12 @@
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="container">
-    <div class="row my-5 mx-5 justify-content-center">
-        <div class="col-md-3 mb-3">
+    <div class="row my-5 justify-content-center">
+        <div class="col-lg-2 col-3">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-8">
             <!-- alert -->
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show" role="alert">
                 <span th:text="${message}">message</span>
@@ -79,7 +79,7 @@
                         <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
                     </div>
                     <div class="form-group d-flex align-items-end flex-column">
-                        <button class="btn btn-primary btn-block" type="submit">Update</button>
+                        <button class="btn btn-primary btn-block" type="submit">Confirm</button>
                     </div>
                 </form>
             </div>
