--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -11,12 +11,12 @@
 
 <main>
     <div class="container">
-        <div class="row my-5 mx-5 justify-content-center">
-            <div class="col-md-3 mb-3"><!-- menu -->
+        <div class="row my-5 justify-content-center">
+            <div class="col-lg-2 col-3">
                 <div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-8">
                 <!-- description -->
                 <div class="alert alert-dark" role="alert">
                     You can add a zone with comma or enter key
